chore: update dependencies and package configuration
- Update package.json with new dependencies for feature flags and testing
- Update pnpm-lock.yaml with new package versions
- Add dependencies for MSW, multi-tenant support, and integration testing
- Update project metadata and scripts

Closes: package-updates

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:integration": "jest --config=jest.integration.config.ts",
+    "test:all": "jest && jest --config=jest.integration.config.ts",
     "e2e": "pnpm exec playwright test",
     "e2e:ui": "pnpm exec playwright test --ui",
     "e2e:debug": "pnpm exec playwright test --debug",
@@ -145,7 +147,9 @@
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "jest-fixed-jsdom": "^0.0.9",
     "jest-json-schema": "^6.1.0",
+    "jsdom": "^26.1.0",
     "lint-staged": "^16.1.5",
     "msw": "^2.10.5",
     "pino-pretty": "^13.1.1",
