--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     }
   ],
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@mdx-js/react": "^3.1.0",
     "@sentry/nextjs": "^10.5.0",
     "@t3-oss/env-nextjs": "^0.13.8",
@@ -87,6 +88,7 @@
     "pino-logflare": "^0.5.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-hook-form": "^7.62.0",
     "zod": "^4.1.1"
   },
   "devDependencies": {
