--- a/package.json
+++ b/package.json
@@ -78,10 +78,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/react": "^3.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^10.5.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
+    "clsx": "^2.1.1",
     "markdown-to-jsx": "^7.7.13",
     "next": "15.5.0",
     "pino": "^9.9.0",
@@ -89,6 +91,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
   },
   "devDependencies": {
