--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -2,19 +2,17 @@ name: Vercel Preview Deployment
 
 on:
   push:
-    branches-ignore:
-      - main
+    branches:
+      - develop
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 jobs:
-  test:
+  # Quick smoke test before deployment (tests already run in feature-branch-checks)
+  pre-deploy-check:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [18, 20, 22, 24]
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -25,15 +23,15 @@ jobs:
       - name: Install NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version: '22'
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
-      - name: Run tests
-        run: pnpm test
+      - name: Quick build check
+        run: pnpm build
 
   Deploy-Preview:
-    needs: test
+    needs: pre-deploy-check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -80,6 +78,11 @@ jobs:
           NEXT_PUBLIC_FEATURE_FLAGS_ENABLED: 'true'
           NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'true'
           NEXT_PUBLIC_ANALYTICS_ENABLED: 'true'
+
+          # Feature-specific flags
+          FEATURE_NEW_DASHBOARD: 'true'
+          FEATURE_ADVANCED_REPORTING: 'true'
+          FEATURE_BETA_FEATURES: 'true'
 
           # Sentry
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
