--- a/.github/workflows/deployVercelProd.yml
+++ b/.github/workflows/deployVercelProd.yml
@@ -7,32 +7,9 @@ on:
     branches:
       - main
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [18, 20, 22, 24]
-    steps:
-      - name: Get code
-        uses: actions/checkout@v4
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-      - name: Install NodeJS
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
-          cache: 'pnpm'
-      - name: Install dependencies
-        run: pnpm install
-      - name: Run tests
-        run: pnpm test
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v5
-
+  # Production deployment (all tests already passed in PR checks)
   Deploy-Production:
-    needs: test
+    # No need for 'needs' since PR checks ensure code quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -78,6 +55,11 @@ jobs:
           NEXT_PUBLIC_FEATURE_FLAGS_ENABLED: 'true'
           NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'true'
           NEXT_PUBLIC_ANALYTICS_ENABLED: 'true'
+
+          # Feature-specific flags (production - stable features only)
+          FEATURE_NEW_DASHBOARD: 'false'
+          FEATURE_ADVANCED_REPORTING: 'false'
+          FEATURE_BETA_FEATURES: 'false'
 
           # Sentry
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
