fix(action): add form demos and update CI env configuration

--- a/.github/workflows/feature-branch-checks.yml
+++ b/.github/workflows/feature-branch-checks.yml
@@ -9,6 +9,48 @@ on:
     branches:
       - develop
 
+env:
+  # Environment configuration
+  NODE_ENV: test
+  APP_ENV: development
+  APP_VERSION: 1.0.0-dev
+
+  # Feature flags
+  FEATURE_FLAGS_ENABLED: 'true'
+  FEATURE_FLAGS_PROVIDER: local
+
+  # Multi-tenant
+  MULTI_TENANT_ENABLED: 'false'
+  DEFAULT_TENANT_ID: default
+
+  # API configuration
+  API_RATE_LIMIT_ENABLED: 'false'
+  API_RATE_LIMIT_REQUESTS: '100'
+  API_RATE_LIMIT_WINDOW: 15m
+
+  # Logging configuration
+  LOG_DIR: ./logs
+  LOG_LEVEL: debug
+  FILE_LOG_LEVEL: info
+  CONSOLE_LOG_LEVEL: debug
+  LOG_TO_FILE_DEV: 'true'
+  LOG_TO_FILE_PROD: 'false'
+
+  # Public variables
+  NEXT_PUBLIC_APP_ENV: development
+  NEXT_PUBLIC_APP_VERSION: 1.0.0-dev
+  NEXT_PUBLIC_FEATURE_FLAGS_ENABLED: 'true'
+  NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'false'
+  NEXT_PUBLIC_ANALYTICS_ENABLED: 'false'
+
+  # Feature-specific flags (development - all features enabled)
+  FEATURE_NEW_DASHBOARD: 'true'
+  FEATURE_ADVANCED_REPORTING: 'true'
+  FEATURE_BETA_FEATURES: 'true'
+
+  # Sentry configuration (minimal for testing)
+  NEXT_PUBLIC_SENTRY_DSN: https://22fed432630274c1b5547b07c07b8d01@o4508840267612160.ingest.de.sentry.io/4509899911987280
+
 jobs:
   # Comprehensive checks for feature branches and PRs to develop
   quality-checks:
@@ -42,9 +84,83 @@ jobs:
 
       - name: Run tests
         run: pnpm test
+        env:
+          # Environment configuration
+          NODE_ENV: test
+          APP_ENV: development
+          APP_VERSION: 1.0.0-dev
+
+          # Feature flags
+          FEATURE_FLAGS_ENABLED: 'true'
+          NEXT_PUBLIC_FEATURE_FLAGS_ENABLED: 'true'
+          FEATURE_FLAGS_PROVIDER: local
+
+          # Multi-tenant
+          MULTI_TENANT_ENABLED: 'false'
+          NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'false'
+          DEFAULT_TENANT_ID: default
+
+          # Public variables
+          NEXT_PUBLIC_APP_ENV: development
+          NEXT_PUBLIC_APP_VERSION: 1.0.0-dev
+          NEXT_PUBLIC_ANALYTICS_ENABLED: 'false'
+
+          # Feature-specific flags (development - all features enabled)
+          FEATURE_NEW_DASHBOARD: 'true'
+          FEATURE_ADVANCED_REPORTING: 'true'
+          FEATURE_BETA_FEATURES: 'true'
+
+          # Sentry configuration
+          NEXT_PUBLIC_SENTRY_DSN: https://22fed432630274c1b5547b07c07b8d01@o4508840267612160.ingest.de.sentry.io/4509899911987280
 
       - name: Build check
         run: pnpm build
+        env:
+          # Environment configuration
+          NODE_ENV: test
+          APP_ENV: development
+          APP_VERSION: 1.0.0-dev
+
+          # Feature flags
+          FEATURE_FLAGS_ENABLED: 'true'
+          NEXT_PUBLIC_FEATURE_FLAGS_ENABLED: 'true'
+          FEATURE_FLAGS_PROVIDER: local
+
+          # Multi-tenant
+          MULTI_TENANT_ENABLED: 'false'
+          NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'false'
+          DEFAULT_TENANT_ID: default
+
+          # Public variables
+          NEXT_PUBLIC_APP_ENV: development
+          NEXT_PUBLIC_APP_VERSION: 1.0.0-dev
+          NEXT_PUBLIC_ANALYTICS_ENABLED: 'false'
+
+          # Sentry configuration
+          # Sentry
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ozi
+          SENTRY_PROJECT: nextjs-15-boilerplate
 
       - name: Check environment setup
         run: node scripts/setup-env.js check
+        env:
+          # Environment configuration
+          NODE_ENV: test
+          APP_ENV: development
+          APP_VERSION: 1.0.0-dev
+
+          # Feature flags
+          FEATURE_FLAGS_ENABLED: 'true'
+          NEXT_PUBLIC_FEATURE_FLAGS_ENABLED: 'true'
+          FEATURE_FLAGS_PROVIDER: local
+
+          # Multi-tenant
+          MULTI_TENANT_ENABLED: 'false'
+          NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'false'
+          DEFAULT_TENANT_ID: default
+
+          # Public variables
+          NEXT_PUBLIC_APP_ENV: development
+          NEXT_PUBLIC_APP_VERSION: 1.0.0-dev
+          NEXT_PUBLIC_ANALYTICS_ENABLED: 'false'
