refactor(config): migrate environment setup script to esm module
- renamed setup-env.js to setup-env.mjs for esm compatibility
- updated all workflow references and package.json scripts
- enhanced script with improved environment detection logic
- added support for branch-based environment configuration
- streamlined type checking in branch protection workflow
- updated documentation and codeowners references

--- a/.github/workflows/feature-branch-checks.yml
+++ b/.github/workflows/feature-branch-checks.yml
@@ -143,7 +143,7 @@ jobs:
           SENTRY_PROJECT: nextjs-15-boilerplate
 
       - name: Check environment setup
-        run: node scripts/setup-env.js check
+        run: node scripts/setup-env.mjs check
         env:
           # Environment configuration
           NODE_ENV: test
