ci(labeler): update labeler configuration and workflow permissions
- add 'public/**/*' to frontend label matching
- refine config file patterns to specific filenames
- add new 'dependencies' label for package files
- update labeler workflow to include synchronize event
- add required permissions for PR labeling
- specify configuration path explicitly

fix(logger): add type assertion for logflare env variables

- add 'as string' casting to env variables in logflare transports
- ensure proper type handling for api key and source token

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,6 +2,7 @@ frontend:
   - any-of:
       - 'src/app/**/*'
       - 'src/stories/**/*'
+      - 'public/**/*'
 
 backend:
   - any-of:
@@ -18,13 +19,22 @@ tests:
 
 config:
   - any-of:
-      - '*.json'
-      - '*.js'
-      - '*.ts'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'next.config.js'
+      - 'tailwind.config.ts'
+      - '.eslintrc.json'
+      - '.prettierrc'
       - '.github/**/*'
       - '.storybook/**/*'
+      - 'plop-templates/**/*'
 
 docs:
   - any-of:
       - '*.md'
       - 'docs/**/*'
+
+dependencies:
+  - any-of:
+      - 'package.json'
+      - 'pnpm-lock.yaml'
