--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "e2e": "pnpm exec playwright test",
     "e2e:ui": "pnpm exec playwright test --ui",
     "e2e:debug": "pnpm exec playwright test --debug",
+    "e2e:chromium": "pnpm exec playwright test --project=chromium",
+    "e2e:firefox": "pnpm exec playwright test --project=firefox",
+    "e2e:webkit": "pnpm exec playwright test --project=webkit",
+    "e2e:smoke": "pnpm exec playwright test --grep='@smoke'",
+    "e2e:headed": "pnpm exec playwright test --headed",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "serve-storybook": "serve storybook-static",
