--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,9 +42,11 @@ jobs:
         uses: actions/cache@v4
         id: playwright-cache
         with:
-          path: ~/.cache/ms-playwright
-          key: playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: |
+            ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}-v2
           restore-keys: |
+            playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}-
             playwright-${{ runner.os }}-
 
       - name: Install dependencies
@@ -52,7 +54,7 @@ jobs:
 
       - name: Install Playwright Browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: pnpm exec playwright install ${{ matrix.project }} --with-deps
+        run: pnpm exec playwright install --with-deps
       - name: Run Playwright tests
         run: pnpm exec playwright test --project=${{ matrix.project }}
       - uses: actions/upload-artifact@v4
