--- a/.github/workflows/playwright-sharded.yml
+++ b/.github/workflows/playwright-sharded.yml
@@ -43,9 +43,11 @@ jobs:
         uses: actions/cache@v4
         id: playwright-cache
         with:
-          path: ~/.cache/ms-playwright
-          key: playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: |
+            ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}-v2
           restore-keys: |
+            playwright-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}-
             playwright-${{ runner.os }}-
 
       - name: Install dependencies
