ci(playwright): ensure system dependencies are installed when cache is hit
The previous implementation skipped `playwright install-deps` when the cache was hit,
which could lead to missing system dependencies in certain environments. This change
ensures that even with a cache hit, system dependencies are properly installed by
running `playwright install-deps` in the else branch.

This adjustment is applied across all Playwright workflow files:
- playwright-optimized.yml
- playwright-sharded.yml
- playwright-smoke.yml
- playwright.yml

Additionally, the smoke test execution in playwright-smoke.yml now uses the dedicated
'smoke' project instead of filtering with --grep.

--- a/.github/workflows/playwright-sharded.yml
+++ b/.github/workflows/playwright-sharded.yml
@@ -54,8 +54,13 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright Browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: pnpm exec playwright install --with-deps
+        run: |
+          if [ "${{ steps.playwright-cache.outputs.cache-hit }}" != "true" ]; then
+            pnpm exec playwright install --with-deps
+          else
+            # Even with cache, ensure system dependencies are available
+            pnpm exec playwright install-deps
+          fi
 
       - name: Run Playwright tests
         run: pnpm exec playwright test --shard=${{ matrix.shard }}/4
