--- a/.github/workflows/playwright-optimized.yml
+++ b/.github/workflows/playwright-optimized.yml
@@ -50,8 +50,13 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright Browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: pnpm exec playwright install --with-deps
+        run: |
+          if [ "${{ steps.playwright-cache.outputs.cache-hit }}" != "true" ]; then
+            pnpm exec playwright install --with-deps
+          else
+            # Even with cache, ensure system dependencies are available
+            pnpm exec playwright install-deps
+          fi
 
       - name: Run Playwright tests (Chromium first - fastest feedback)
         run: pnpm exec playwright test --project=chromium
