ci(deploy): clear pnpm cache and improve dependency installation
- Add .npmrc with hoisting configuration for OpenTelemetry packages
- Update workflows to prune pnpm store and use frozen lockfile
- Expand serverExternalPackages in next.config.ts for better instrumentation support

This ensures more reliable and consistent dependency installation across environments,
particularly for OpenTelemetry-related packages that require specific hoisting behavior.
The changes also help prevent potential "can't be external" errors during build time.

--- a/.github/workflows/deployVercelProd.yml
+++ b/.github/workflows/deployVercelProd.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm depcheck madge  @sentry/cli
 
-      - name: Install Dependencies
-        run: pnpm install
+      - name: Clear pnpm cache and install dependencies
+        run: |
+          pnpm store prune
+          pnpm install --frozen-lockfile
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
