--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -47,8 +47,10 @@ jobs:
       - name: Install pnpm and tools
         run: npm install -g pnpm depcheck madge @lhci/cli @sentry/cli
 
-      - name: Install Dependencies
-        run: pnpm install
+      - name: Clear pnpm cache and install dependencies
+        run: |
+          pnpm store prune
+          pnpm install --frozen-lockfile
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
