ci(deps): optimize dependency installation and resolve OpenTelemetry conflicts
- Remove pnpm store prune steps in CI workflows for faster installs
- Update .npmrc to dedupe OpenTelemetry packages and remove shamefully-hoist
- Remove OpenTelemetry packages from serverComponentsExternalPackages in next.config.ts
- Add OpenTelemetry overrides in package.json to ensure version consistency

--- a/.github/workflows/deployVercelProd.yml
+++ b/.github/workflows/deployVercelProd.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm depcheck madge  @sentry/cli
 
-      - name: Clear pnpm cache and install dependencies
+      - name: Install dependencies with proper resolution
         run: |
-          pnpm store prune
           pnpm install --frozen-lockfile
 
       - name: Pull Vercel Environment Information
