--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -47,9 +47,8 @@ jobs:
       - name: Install pnpm and tools
         run: npm install -g pnpm depcheck madge @lhci/cli @sentry/cli
 
-      - name: Clear pnpm cache and install dependencies
+      - name: Install dependencies with proper resolution
         run: |
-          pnpm store prune
           pnpm install --frozen-lockfile
 
       - name: Pull Vercel Environment Information
