--- a/.npmrc
+++ b/.npmrc
@@ -1,11 +1,9 @@
-# Hoist OpenTelemetry instrumentation packages to avoid "can't be external" errors
-# This is required for Sentry and other OpenTelemetry packages in pnpm workspaces
+# Hoist instrumentation packages to avoid "can't be external" errors
 public-hoist-pattern[]=*import-in-the-middle*
 public-hoist-pattern[]=*require-in-the-middle*
-public-hoist-pattern[]=*@opentelemetry*
-
-# Enable shamefully-hoist for better compatibility with instrumentation packages
-shamefully-hoist=true
 
 # Auto-install peer dependencies
 auto-install-peers=true
+
+# Dedupe OpenTelemetry packages to avoid version conflicts
+dedupe-peer-dependents=true
