--- a/.npmrc
+++ b/.npmrc
@@ -1,9 +1,2 @@
-# Hoist instrumentation packages to avoid "can't be external" errors
+# Hoist instrumentation packages to avoid "can't be external" errors in CI
 public-hoist-pattern[]=*import-in-the-middle*
-public-hoist-pattern[]=*require-in-the-middle*
-
-# Auto-install peer dependencies
-auto-install-peers=true
-
-# Dedupe OpenTelemetry packages to avoid version conflicts
-dedupe-peer-dependents=true
