ci(branch-policy): enforce develop-only PRs to main with new workflow
Add comprehensive branch protection setup guide and automated enforcement
workflow to ensure only PRs from the develop branch can be merged into main.
Includes detailed configuration steps for GitHub branch protection rules,
status checks, and automated validation.

The workflow validates the source branch on PR creation and provides clear
error messages for policy violations.

The changes include:
- New branch policy enforcement workflow that runs on PRs to main
- Detailed setup guide for branch protection configuration
- Validation logic to ensure proper branching strategy
- Integration with existing CI checks for main and develop branches

--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -1,4 +1,4 @@
-name: PR Checks
+name: Main Branch PR Checks
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  # Enhanced checks for PRs to main (develop → main)
+  # Enhanced checks for PRs to main (develop → main only)
   # These are the final quality gates before production
   main-pr-checks:
     runs-on: ubuntu-latest
