feat(auth): integrate Clerk authentication with dashboard and API user route
- Add ClerkProvider to root layout and configure middleware
- Implement user API route to fetch authenticated user data
- Create dashboard page with user info and feature flags
- Update home page with sign in/out buttons and user button
- Add server-side auth utilities and environment configuration

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     }
   ],
   "dependencies": {
+    "@clerk/nextjs": "^6.31.8",
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-slot": "^1.2.3",
