feat(auth): add Clerk testing dependency for enhanced auth flows

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.1",
+    "@clerk/testing": "^1.12.4",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3.3.1",
