--- a/.github/workflows/deployVercelProd.yml
+++ b/.github/workflows/deployVercelProd.yml
@@ -31,6 +31,18 @@ jobs:
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
+      - name: Verify environment (production)
+        run: node scripts/verify-vercel-env.mjs
+        env:
+          APP_ENV: production
+          # Secrets are already available in the job env from Vercel pull and repository secrets
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+          CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+          UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
+          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+          CSRF_SECURE_COOKIES: 'true'
+          NEXT_PUBLIC_APP_ENV: production
+
       - name: Build Project Artifact
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
         env:
