chore(config): add placeholder values for clerk and upstash in env example

--- a/.env.example
+++ b/.env.example
@@ -42,8 +42,8 @@ API_RATE_LIMIT_WINDOW="15m"             # e.g., 60s, 15m, 1h
 DISABLE_RATE_LIMITING="false"           # disable rate limiting entirely (primarily for tests)
 
 # === Redis (Upstash) ===
-UPSTASH_REDIS_REST_URL=""               # required when API_RATE_LIMIT_ENABLED="true" — set real value in Vercel (Preview/Prod)
-UPSTASH_REDIS_REST_TOKEN=""             # required when API_RATE_LIMIT_ENABLED="true" — set real value in Vercel (Preview/Prod)
+UPSTASH_REDIS_REST_URL="https://upstash.io/rest/v1"      # required when API_RATE_LIMIT_ENABLED="true" — set real value in Vercel (Preview/Prod)
+UPSTASH_REDIS_REST_TOKEN="XXXXXXXXX"                     # required when API_RATE_LIMIT_ENABLED="true" — set real value in Vercel (Preview/Prod)
 
 # === Security ===
 CORS_ORIGINS="*"
@@ -65,13 +65,13 @@ LOG_TO_FILE_PROD="false"
 LOG_TO_FILE_DEV="false"
 
 # === Authentication (Clerk) ===
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""    # required (public) — set the real value in Vercel (Preview/Prod)
-CLERK_SECRET_KEY=""                      # required (server only) — set the real value in Vercel (Preview/Prod)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_XXXXXX"     # required (public) — set the real value in Vercel (Preview/Prod)
+CLERK_SECRET_KEY="sk_test_XXXXXX"                      # required (server only) — set the real value in Vercel (Preview/Prod)
 
 # === External Services ===
 LOGFLARE_INTEGRATION_ENABLED="false"
 LOGFLARE_LOG_LEVEL="info"
-LOGFLARE_API_KEY=""                     # required if LOGFLARE_INTEGRATION_ENABLED="true"
+LOGFLARE_API_KEY=""                      # required if LOGFLARE_INTEGRATION_ENABLED="true"
 LOGFLARE_SOURCE_TOKEN=""                 # required if LOGFLARE_INTEGRATION_ENABLED="true"
 
 # === CSP allowlists for browser (optional; add exact origins you load) ===
