chore(scripts): add plop commands for code generation
Introduce npm scripts for generating boilerplate using Plop:
- APIs
- Components
- Pages
- Middleware
- Hooks
- Utilities
- Env files

--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "lint:fix": "next lint --fix",
     "prepare": "husky",
     "release": "semantic-release",
+    "generate": "plop",
+    "generate:api": "plop Api",
+    "generate:component": "plop Component",
+    "generate:page": "plop Page",
+    "generate:middleware": "plop Middleware",
+    "generate:hook": "plop Hook",
+    "generate:util": "plop Utility",
+    "generate:env": "plop Env",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
