ci: update env vars for Playwright workflows
Update environment variables in Playwright CI workflows to:
- Set `NODE_ENV` and `APP_ENV` to `'test'`
- Use `127.0.0.1` for all URLs
- Disable rate limiting and multi-tenancy
- Add test-specific vars like `SENTRY_ENVIRONMENT`

Optimizes CI testing environments for reliability and consistency.

--- a/.github/workflows/playwright-optimized.yml
+++ b/.github/workflows/playwright-optimized.yml
@@ -13,8 +13,18 @@ env:
   LOGFLARE_ENDPOINT: 'https://logflare.app/api/logs'
   UPSTASH_REDIS_REST_URL: 'https://dummy.upstash.io'
   UPSTASH_REDIS_REST_TOKEN: 'dummy'
-  NEXT_PUBLIC_APP_URL: http://localhost:3000
-  NODE_ENV: development
+  NEXT_PUBLIC_APP_URL: 'http://127.0.0.1:3000'
+  APP_URL: 'http://127.0.0.1:3000'
+  NODE_ENV: 'test'
+  APP_ENV: 'test'
+  DISABLE_RATE_LIMITING: 'true'
+  NEXT_PUBLIC_API_RATE_LIMIT_ENABLED: 'false'
+  CSRF_COOKIE_PREFIX: 'foo_'
+  MULTI_TENANT_ENABLED: 'false'
+  NEXT_PUBLIC_MULTI_TENANT_ENABLED: 'false'
+  NEXT_PUBLIC_APP_ENV: 'test'
+  NEXT_PUBLIC_APP_VERSION: '1.0.0-test'
+  SENTRY_ENVIRONMENT: 'test'
 on:
   workflow_dispatch: # Manual trigger for testing
   # pull_request:
